--- a/study/t_study/Ex/study/deer.html
+++ b/study/t_study/Ex/study/deer.html
@@ -17,10 +17,11 @@
                 Pen Tool을 사용하였고 채색은 Expand와 Live Paint를 사용해서 만들어 봤습니다.
             </p>
 
-            <hr>
+            <hr><br><br>
 
             <p class="t_desc">
-                펜툴로 따기 전에 사진에 oper
+                펜툴로 따기 전 사진에 opercity를 이용해 투명도를 낮춰 더욱 작업하기 편하게 설정합니다.<br>
+                오직 시간과 노오력만으로 빠르게 작업해줍니다.
             </p>
         </div>
     </main>
