--- a/javascript/effect/quizeffect03.html
+++ b/javascript/effect/quizeffect03.html
@@ -14,6 +14,16 @@
 </head>
 
 <body>
+
+    <!-- 01. 퀴즈 이펙트 : 정답 확인하기
+    02. 퀴즈 이펙트 : 주관식 확인하기
+    03. 퀴즈 이펙트 : 주관식(여러 문제) 확인하기
+    04. 퀴즈 이펙트 : 객관식 확인하기
+    05. 퀴즈 이펙트 : 객관식(여러 문제) 확인하기 : 점수
+    06. 퀴즈 이펙트 : 객관식(여러 문제) 확인하기 : 슬라이드 형식
+    07. 퀴즈 이펙트 : 객관식(여러 문제) 확인하기 : 시험 형식
+    08. 퀴즈 이펙트 : 객관식(여러 문제) 확인하기 : 게임 형식 -->
+    
     <header id="header">
         <h1><a href="../javascript01.html">Quiz</a><em>주관식 유형</em></h1>
         <nav>
@@ -24,6 +34,7 @@
                 <li><a href="quizEffect04.html">4</a></li>
                 <li><a href="quizEffect05.html">5</a></li>
                 <li><a href="quizEffect06.html">6</a></li>
+                <li><a href="quizEffect07.html">7</a></li>
             </ul>
         </nav>
     </header>
