--- a/study/t_study/Ex/study/quiz04.html
+++ b/study/t_study/Ex/study/quiz04.html
@@ -14,7 +14,7 @@
             <h2 class="t_tit">Quiz 04</h2>
             <p class="t_desc2">
                 웹디자인기능사 필기 시험에 나오는 객관식 문제를 코딩으로 만들어 풀어보세요.<br>
-                자바스크립트를 이용해 퀴즈 형태 방식을 코딩
+                자바스크립트를 이용해 퀴즈 형태 방식을 코딩해봤습니다.
             </p>
 
             <div class="t_iframe" style="min-height: 1000px; padding-top: 0;">
@@ -31,15 +31,15 @@
             </p>
             <div class="t_code">
 <pre><code code="language-js">    // 선택자
-    const quizType = document.querySelector(".quiz__type");                     // 퀴즈 종류
+    const quizType = document.querySelector(".quiz__type");                                 // 퀴즈 종류
     const quizNumber = document.querySelector(".quiz__question .number");       // 퀴즈 번호
-    const quizAsk = document.querySelector(".quiz__question .ask");             // 퀴즈 질문
-    const quizConfirm = document.querySelector(".quiz__answer .confirm");       // 정답 확인 버튼
-    const quizResult = document.querySelector(".quiz__answer .result");         // 정답 결과
-    const quizView = document.querySelector(".quiz__view");                     // 강아지
-    const quizSelects = document.querySelector(".quiz__selects");               // 객관식 보기
-    const quizChoice = quizSelects.querySelectorAll(".choice");                 // 객관식 보기
-    const quizSelcet = quizSelects.querySelectorAll(".select");                 // 객관식 보기
+    const quizAsk = document.querySelector(".quiz__question .ask");                     // 퀴즈 질문
+    const quizConfirm = document.querySelector(".quiz__answer .confirm");         // 정답 확인 버튼
+    const quizResult = document.querySelector(".quiz__answer .result");               // 정답 결과
+    const quizView = document.querySelector(".quiz__view");                                 // 강아지
+    const quizSelects = document.querySelector(".quiz__selects");                         // 객관식 보기
+    const quizChoice = quizSelects.querySelectorAll(".choice");                               // 객관식 보기
+    const quizSelcet = quizSelects.querySelectorAll(".select");                                 // 객관식 보기
 
     // 문제 정보
     const quizInfo = [
