--- a/test.html
+++ b/test.html
@@ -1,55 +1,95 @@
-&lt;main id="main">
-    &lt;div class="search__wrap">
-        &lt;span>charAt()를 이용하여 검색하기&lt;/span>
-        &lt;h1>CSS 속성 검색하기&lt;/h1>
+// 선택자
+        const quizWrap = document.querySelector(".quiz__wrap")
+
+        // 문제 출력
+        function updateQuiz() {
+            const exam = [];
+
+            quizInfo.forEach((question, number) => {
+                exam.push(`
+                &lt;div class="quiz">
+                &lt;span class="quiz__type">${question.answerType}&lt;/span>
+                &lt;h2 class="quiz__question">
+                    &lt;span class="number">${question.answerNum}&lt;/span>
+                    &lt;div class="ask">${question.answerAsk}&lt;/div>
+                &lt;/h2>
+                &lt;div class="quiz__view">
+                    &lt;div class="true">정답입니다.&lt;/div>
+                    &lt;div class="false">오답입니다.&lt;/div>
+                    &lt;div class="dog">
+                        &lt;div class="head">
+                            &lt;div class="ears">&lt;/div>
+                            &lt;div class="face">&lt;/div>
+                            &lt;div class="eyes">
+                                &lt;div class="teardrop">&lt;/div>
+                            &lt;/div>
+                            &lt;div class="nose">&lt;/div>
+                            &lt;div class="mouth">
+                                &lt;div class="tongue">&lt;/div>
+                            &lt;/div>
+                            &lt;div class="chin">&lt;/div>
+                        &lt;/div>
+                        &lt;div class="body">
+                            &lt;div class="tail">&lt;/div>
+                            &lt;div class="legs">&lt;/div>
+                        &lt;/div>
+                    &lt;/div>
+                &lt;/div>
+                &lt;div class="quiz__answer">
+                    &lt;div class="quiz__selects">
+                        &lt;label for="select1${number}">
+                            &lt;input type="radio" id="select1${number}" class="select" name="select${number}" value="1">
+                            &lt;span class="choice">${question.answerChoice[1]}&lt;/span>
+                        &lt;/label>
+                        &lt;label for="select2${number}">
+                            &lt;input type="radio" id="select2${number}" class="select" name="select${number}" value="2">
+                            &lt;span class="choice">${question.answerChoice[2]}&lt;/span>
+                        &lt;/label>
+                        &lt;label for="select3${number}">
+                            &lt;input type="radio" id="select3${number}" class="select" name="select${number}" value="3">
+                            &lt;span class="choice">${question.answerChoice[3]}&lt;/span>
+                        &lt;/label>
+                        &lt;label for="select4${number}">
+                            &lt;input type="radio" id="select4${number}" class="select" name="select${number}" value="4">
+                            &lt;span class="choice">${question.answerChoice[4]}&lt;/span>
+                        &lt;/label>
+                    &lt;/div>
+                &lt;/div>
+            &lt;/div>
+                `)
+
+            });
+            exam.push(`
+                &lt;div class="quiz__confirm">
+                    &lt;button class="check">정답 확인하기&lt;/button>
+                    &lt;div class="ex">&lt;/div>
+                &lt;/div>
+            `)
+
+            quizWrap.innerHTML = exam.join('')
+        }
+        updateQuiz();
         
-        &lt;div class="search__box">
-            &lt;label for="search">검색하기&lt;/label>
-            &lt;input type="text" id="search" placeholder="CSS 속성 및 유형을 입력해주세요.">
-        &lt;/div>
-        &lt;div class="search__info">
-            &lt;div class="keyword">
-                &lt;span>a&lt;/span>
-                &lt;span>b&lt;/span>
-                &lt;span>c&lt;/span>
-                &lt;span>d&lt;/span>
-                &lt;span>e&lt;/span>
-                &lt;span>f&lt;/span>
-                &lt;span>g&lt;/span>
-                &lt;span>h&lt;/span>
-                &lt;span>i&lt;/span>
-                &lt;span>j&lt;/span>
-                &lt;span>k&lt;/span>
-                &lt;span>l&lt;/span>
-                &lt;span>m&lt;/span>
-                &lt;span>n&lt;/span>
-                &lt;span>o&lt;/span>
-                &lt;span>p&lt;/span>
-                &lt;span>q&lt;/span>
-                &lt;span>r&lt;/span>
-                &lt;span>s&lt;/span>
-                &lt;span>t&lt;/span>
-                &lt;span>u&lt;/span>
-                &lt;span>v&lt;/span>
-                &lt;span>w&lt;/span>
-                &lt;span>x&lt;/span>
-                &lt;span>y&lt;/span>
-                &lt;span>z&lt;/span>
-            &lt;/div>
-            &lt;div>전체 속성 갯수 : &lt;span class="num">0&lt;/span>&lt;/div>
-        &lt;/div>
-        &lt;div class="search__list">
-            &lt;div class="css">
-                &lt;ul>
-                    &lt;li>&lt;strong>accent-color&lt;/strong> : href특성을 통해 다른 페이지나 같은페이지의 위치, 파일와 그 외 다른 URL로 연결할 수 있는 하이퍼 링크를 만듭니다.&lt;/li>
-                    &lt;li>&lt;strong>align-content&lt;/strong> :  콘텐츠 아이템의 상하관계 정렬 상태를 설정&lt;/li>
-                    &lt;li>&lt;strong>align-items&lt;/strong> : 콘텐츠 아이템의 내부 상하관계 정렬 상태를 설정&lt;/li>
-                    .
-                    .
-                    .
-                    &lt;li>&lt;strong>z-index&lt;/strong> : 위치 지정 요소와, 그 자손 또는 하위 플렉스 아이템의 Z축 순서를 지정&lt;/li>
-                &lt;/ul>
-            &lt;/div>
-        &lt;/div>
-    &lt;/div>
-&lt;/main>
+        //정답 확인
+        function answerQuiz(){
+            const quizSelects = document.querySelectorAll(".quiz__selects");    //보기
+            const quizView = document.querySelectorAll(".quiz__view");          //강아지
+            //사용자가 체크한 라디오 박스  == 문제 정답
+            quizInfo.forEach((question, number) => {
+                const quizSelectsWrap = quizSelects[number];                    //전체 보기 박스
+                const userSelector = `input[name=select${number}]:checked`;         //사용자가 클린한 라디오 박스
+                const userAnswer = (quizSelectsWrap.querySelector(userSelector) || {}).value
+                const quizView = document.querySelectorAll(".quiz__view");
+                console.log(quizSelects)
+                if(userAnswer == question.answerResult){
+                    console.log("정답")
+                    quizView[number].classList.add("like");
+                } else {
+                    console.log("오답")
+                    quizView[number].classList.add("dislike");
+                    const div = document.createElement("div");
+                    quizSelectsWrap.appendChild(div).innerHTML = `&lt;p class="result">${question.answerEx}&lt;/p>`;
+                }
+            });
+        }
+        document.querySelector(".quiz__confirm .check").addEventListener("click", answerQuiz);
