--- a/javascript/effect/quizEffect06.html
+++ b/javascript/effect/quizEffect06.html
@@ -159,6 +159,7 @@
             }
         ];
         
+        // 선택자
         const quizType = document.querySelector(".quiz__type");                 // 시험 날짜
         const quizQuestion = document.querySelector(".quiz__question");         // 문제 번호, 질문
         const quizSelects = document.querySelector(".quiz__selects");           // 객관식 보기
@@ -221,6 +222,7 @@
             if(userAnswer == currentAnswer) {
                 console.log("정답")
                 quizView.classList.add("like");
+                quizScore++;
             } else {
                 console.log("오답")
                 quizView.classList.add("dislike");
@@ -237,7 +239,7 @@
 
             // 마지막 문제
             if(quizInfo.length -1 == quizCount) {
-                quizConfirm.textContent = "총 몇 문제 중에 몇 문제를 맞추었습니다."
+                quizConfirm.textContent = `"총 ${quizInfo.length}문제 중에 ${quizScore}문제를 맞췄습니다."`
             }
         }
 
