--- a/study/t_study/Ex/study/quiz06.html
+++ b/study/t_study/Ex/study/quiz06.html
@@ -26,106 +26,96 @@
 
             <h3 class="t_tit2">자바스크립트</h3>
             <p class="t_desc2">
-                데이터 값의 입력과 함수와 forEach문을 사용
+                데이터 값의 입력과 함수와 for문을 사용
             </p>
             <details>
                 <summary>코드 보기</summary>
             <div class="t_code">
 <pre><code code="language-js">    // 선택자
-    const quizWrap = document.querySelector(".quiz__wrap")
+    const quizType = document.querySelector(".quiz__type");                 // 시험 날짜
+    const quizQuestion = document.querySelector(".quiz__question");         // 문제 번호, 질문
+    const quizSelects = document.querySelector(".quiz__selects");           // 객관식 보기
+    const quizResult = document.querySelector(".quiz__answer .result")      // 해설
+    const quizConfirm = document.querySelector(".quiz__answer .confirm")    // 정답 확인 버튼
+    const quizView = document.querySelector(".quiz__view")                  // 강아지
+
+    let quizCount = 0;
+    let quizScore = 0;
 
     // 문제 출력
-    function updateQuiz() {
-        const exam = [];
+    const updateQuiz = (index) => {
+        const questionTag = `
+            &lt;span class="number">${quizInfo[index].answerNum}. &lt;/span>
+            &lt;div class="ask">${quizInfo[index].answerAsk}&lt;/div>
+        `;
+        const choiceTag = `
+            &lt;label for="select1">
+                &lt;input type="radio" id="select1" class="select" name="select" value="1">
+                &lt;span class="choice">${quizInfo[index].answerChoice[0]}&lt;/span>
+            &lt;/label>
+            &lt;label for="select2">
+                &lt;input type="radio" id="select2" class="select" name="select" value="2">
+                &lt;span class="choice">${quizInfo[index].answerChoice[1]}&lt;/span>
+            &lt;/label>
+            &lt;label for="select3">
+                &lt;input type="radio" id="select3" class="select" name="select" value="3">
+                &lt;span class="choice">${quizInfo[index].answerChoice[2]}&lt;/span>
+            &lt;/label>
+            &lt;label for="select4">
+                &lt;input type="radio" id="select4" class="select" name="select" value="4">
+                &lt;span class="choice">${quizInfo[index].answerChoice[3]}&lt;/span>
+            &lt;/label>
+        `;
 
-        quizInfo.forEach((question, number) => {
-            exam.push(`
-            &lt;div class="quiz">
-            &lt;span class="quiz__type">${question.answerType}&lt;/span>
-            &lt;h2 class="quiz__question">
-                &lt;span class="number">${question.answerNum}&lt;/span>
-                &lt;div class="ask">${question.answerAsk}&lt;/div>
-            &lt;/h2>
-            &lt;div class="quiz__view">
-                &lt;div class="true">정답입니다.&lt;/div>
-                &lt;div class="false">오답입니다.&lt;/div>
-                &lt;div class="dog">
-                    &lt;div class="head">
-                        &lt;div class="ears">&lt;/div>
-                        &lt;div class="face">&lt;/div>
-                        &lt;div class="eyes">
-                            &lt;div class="teardrop">&lt;/div>
-                        &lt;/div>
-                        &lt;div class="nose">&lt;/div>
-                        &lt;div class="mouth">
-                            &lt;div class="tongue">&lt;/div>
-                        &lt;/div>
-                        &lt;div class="chin">&lt;/div>
-                    &lt;/div>
-                    &lt;div class="body">
-                        &lt;div class="tail">&lt;/div>
-                        &lt;div class="legs">&lt;/div>
-                    &lt;/div>
-                &lt;/div>
-            &lt;/div>
-            &lt;div class="quiz__answer">
-                &lt;div class="quiz__selects">
-                    &lt;label for="select1${number}">
-                        &lt;input type="radio" id="select1${number}" class="select" name="select${number}" value="1">
-                        &lt;span class="choice">${question.answerChoice[1]}&lt;/span>
-                    &lt;/label>
-                    &lt;label for="select2${number}">
-                        &lt;input type="radio" id="select2${number}" class="select" name="select${number}" value="2">
-                        &lt;span class="choice">${question.answerChoice[2]}&lt;/span>
-                    &lt;/label>
-                    &lt;label for="select3${number}">
-                        &lt;input type="radio" id="select3${number}" class="select" name="select${number}" value="3">
-                        &lt;span class="choice">${question.answerChoice[3]}&lt;/span>
-                    &lt;/label>
-                    &lt;label for="select4${number}">
-                        &lt;input type="radio" id="select4${number}" class="select" name="select${number}" value="4">
-                        &lt;span class="choice">${question.answerChoice[4]}&lt;/span>
-                    &lt;/label>
-                &lt;/div>
-            &lt;/div>
-        &lt;/div>
-            `)
+        // 문제 출력
+        quizQuestion.innerHTML = questionTag;           // 번호, 질문
+        quizSelects.innerHTML = choiceTag;              // 객관식
+        quizType.innerHTML = quizInfo[index].answerType     // 시험 날짜
+        quizResult.innerHTML = quizInfo[index].answerEx     // 해설
 
-        });
-        exam.push(`
-            &lt;div class="quiz__confirm">
-                &lt;button class="check">정답 확인하기&lt;/button>
-                &lt;div class="ex">&lt;/div>
-            &lt;/div>
-        `)
+        const quizChoice = quizSelects.querySelectorAll(".choice");
 
-        quizWrap.innerHTML = exam.join('')
+        for(let i=0; i&lt;quizChoice.length; i++) {
+            quizChoice[i].setAttribute("onclick", "choiceSelected(this)")
+        }
+
+        // 문제, 해설 숨기기
+        quizResult.style.display = "none";
+        quizConfirm.style.display = "none";
+
     }
-    updateQuiz();
     
-    //정답 확인
-    function answerQuiz(){
-        const quizSelects = document.querySelectorAll(".quiz__selects");    //보기
-        const quizView = document.querySelectorAll(".quiz__view");          //강아지
-        //사용자가 체크한 라디오 박스  == 문제 정답
-        quizInfo.forEach((question, number) => {
-            const quizSelectsWrap = quizSelects[number];                    //전체 보기 박스
-            const userSelector = `input[name=select${number}]:checked`;         //사용자가 클린한 라디오 박스
-            const userAnswer = (quizSelectsWrap.querySelector(userSelector) || {}).value
-            const quizView = document.querySelectorAll(".quiz__view");
-            console.log(quizSelects)
-            if(userAnswer == question.answerResult){
-                console.log("정답")
-                quizView[number].classList.add("like");
-            } else {
-                console.log("오답")
-                quizView[number].classList.add("dislike");
-                const div = document.createElement("div");
-                quizSelectsWrap.appendChild(div).innerHTML = `&lt;p class="result">${question.answerEx}&lt;/p>`;
-            }
-        });
+    updateQuiz(quizCount);
+
+    const choiceSelected = (answer) => {
+        let userAnswer = answer.textContent;                    // 사용자가 체크한 정답
+        let currentAnswer = quizInfo[quizCount].answerResult;   // 문제 정답
+
+        if(userAnswer == currentAnswer) {
+            console.log("정답")
+            quizView.classList.add("like");
+            quizScore++;
+        } else {
+            console.log("오답")
+            quizView.classList.add("dislike");
+            quizResult.style.display = "block";
+        }
+        quizConfirm.style.display = "block"
     }
-    document.querySelector(".quiz__confirm .check").addEventListener("click", answerQuiz);
+
+    // 정답 확인 버튼
+    const answerQuiz = () => {
+        quizCount++;
+        updateQuiz(quizCount);
+        quizView.classList.remove("like", "dislike")
+
+        // 마지막 문제
+        if(quizInfo.length -1 == quizCount) {
+            quizConfirm.textContent = `"총 ${quizInfo.length}문제 중에 ${quizScore}문제를 맞췄습니다."`
+        }
+    }
+
+    quizConfirm.addEventListener("click", answerQuiz);
 </code></pre>
             </div>
             </details>
