--- a/javascript/effect/quizeffect05.html
+++ b/javascript/effect/quizeffect05.html
@@ -889,9 +889,11 @@
             }
         ];
 
+        // 선택자
         const quizWrap = document.querySelector(".quiz__wrap");
         let quizScore = "";
 
+        // 문체 출력
         const updateQuiz = () => {
             const exam = [];
             quizInfo.forEach((question, number) => {
