--- a/javascript/effect/quizEffect06.html
+++ b/javascript/effect/quizEffect06.html
@@ -233,16 +233,13 @@
 
         // 정답 확인 버튼
         const answerQuiz = () => {
+            if (quizInfo.length - 1 == quizCount) {
+                quizConfirm.textContent = `총 ${quizInfo.length} 문제 중에 ${quizScore} 문제를 맞추었습니다.`;
+            }       //마지막 문제 완료 후 정답 갯수 확인
             quizCount++;
             updateQuiz(quizCount);
-            quizView.classList.remove("like", "dislike")
-
-            // 마지막 문제
-            if(quizInfo.length -1 == quizCount) {
-                quizConfirm.textContent = `"총 ${quizInfo.length}문제 중에 ${quizScore}문제를 맞췄습니다."`
-            }
+            quizView.classList.remove("like", "dislike");
         }
-
         quizConfirm.addEventListener("click", answerQuiz);
     </script>
 </body>
