--- a/study/t_study/Ex/study/quiz06.html
+++ b/study/t_study/Ex/study/quiz06.html
@@ -17,11 +17,11 @@
             </p>
 
             <div class="t_iframe" style="min-height: 1000px; padding-top: 0;">
-                <iframe src="https://kdb6.github.io/ck/javascript/effect/quizeffect06.html" frameborder="0"></iframe>
+                <iframe src="https://kdb6.github.io/ck/javascript/effect/quizEffect06.html" frameborder="0"></iframe>
             </div>
 
             <div class="t_link">
-                <a href="https://github.com/KDB6/ck/blob/main/javascript/effect/quizeffect06.html" target="_blank">원본 사이트 보기</a>
+                <a href="https://github.com/KDB6/ck/blob/main/javascript/effect/quizEffect06.html" target="_blank">원본 사이트 보기</a>
             </div>
 
             <h3 class="t_tit2">자바스크립트</h3>
@@ -32,12 +32,12 @@
                 <summary>코드 보기</summary>
             <div class="t_code">
 <pre><code code="language-js">    // 선택자
-    const quizType = document.querySelector(".quiz__type");                 // 시험 날짜
-    const quizQuestion = document.querySelector(".quiz__question");         // 문제 번호, 질문
-    const quizSelects = document.querySelector(".quiz__selects");           // 객관식 보기
-    const quizResult = document.querySelector(".quiz__answer .result")      // 해설
+    const quizType = document.querySelector(".quiz__type");                           // 시험 날짜
+    const quizQuestion = document.querySelector(".quiz__question");              // 문제 번호, 질문
+    const quizSelects = document.querySelector(".quiz__selects");                   // 객관식 보기
+    const quizResult = document.querySelector(".quiz__answer .result")          // 해설
     const quizConfirm = document.querySelector(".quiz__answer .confirm")    // 정답 확인 버튼
-    const quizView = document.querySelector(".quiz__view")                  // 강아지
+    const quizView = document.querySelector(".quiz__view")                            // 강아지
 
     let quizCount = 0;
     let quizScore = 0;
@@ -68,10 +68,10 @@
         `;
 
         // 문제 출력
-        quizQuestion.innerHTML = questionTag;           // 번호, 질문
-        quizSelects.innerHTML = choiceTag;              // 객관식
+        quizQuestion.innerHTML = questionTag;          // 번호, 질문
+        quizSelects.innerHTML = choiceTag;                // 객관식
         quizType.innerHTML = quizInfo[index].answerType     // 시험 날짜
-        quizResult.innerHTML = quizInfo[index].answerEx     // 해설
+        quizResult.innerHTML = quizInfo[index].answerEx      // 해설
 
         const quizChoice = quizSelects.querySelectorAll(".choice");
 
@@ -88,8 +88,8 @@
     updateQuiz(quizCount);
 
     const choiceSelected = (answer) => {
-        let userAnswer = answer.textContent;                    // 사용자가 체크한 정답
-        let currentAnswer = quizInfo[quizCount].answerResult;   // 문제 정답
+        let userAnswer = answer.textContent;                                 // 사용자가 체크한 정답
+        let currentAnswer = quizInfo[quizCount].answerResult;      // 문제 정답
 
         if(userAnswer == currentAnswer) {
             console.log("정답")
@@ -105,16 +105,13 @@
 
     // 정답 확인 버튼
     const answerQuiz = () => {
+        if (quizInfo.length - 1 == quizCount) {
+            quizConfirm.textContent = `총 ${quizInfo.length} 문제 중에 ${quizScore} 문제를 맞추었습니다.`;
+        }       //마지막 문제 완료 후 정답 갯수 확인
         quizCount++;
         updateQuiz(quizCount);
-        quizView.classList.remove("like", "dislike")
-
-        // 마지막 문제
-        if(quizInfo.length -1 == quizCount) {
-            quizConfirm.textContent = `"총 ${quizInfo.length}문제 중에 ${quizScore}문제를 맞췄습니다."`
-        }
+        quizView.classList.remove("like", "dislike");
     }
-
     quizConfirm.addEventListener("click", answerQuiz);
 </code></pre>
             </div>
