--- a/css/index.html
+++ b/css/index.html
@@ -5320,7 +5320,7 @@
                                     <tr>
                                         <td>320</td>
                                         <td>scroll-padding-left</td>
-                                        <td>스크롤포트의 최적 보기 영역 왼쪽에 대한 오프셋을 정의한다.<td>
+                                        <td>스크롤포트의 최적 보기 영역 왼쪽에 대한 오프셋을 정의한다.</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -5372,7 +5372,7 @@
                                     <tr>
                                         <td>324</td>
                                         <td>scroll-snap-coordinate</td>
-                                        <td>scroll-snap-coordinate</td>
+                                        <td>x</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -5385,7 +5385,7 @@
                                     <tr>
                                         <td>325</td>
                                         <td>scroll-snap-destination</td>
-                                        <td>scroll-snap-destination</td>
+                                        <td>x</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -5398,7 +5398,7 @@
                                     <tr>
                                         <td>326</td>
                                         <td>scroll-snap-points-x</td>
-                                        <td>scroll-snap-points-x</td>
+                                        <td>x</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -5411,7 +5411,7 @@
                                     <tr>
                                         <td>327</td>
                                         <td>scroll-snap-points-y</td>
-                                        <td>scroll-snap-points-y</td>
+                                        <td>x</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -5944,7 +5944,7 @@
                                     <tr>
                                         <td>368</td>
                                         <td>transition-property</td>
-                                        <td>전환 효과를 적용할 CSS 속성을 설정한다.<td>
+                                        <td>전환 효과를 적용할 CSS 속성을 설정한다.</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
