--- a/study/t_study/Ex/study/quiz05.html
+++ b/study/t_study/Ex/study/quiz05.html
@@ -17,16 +17,18 @@
             </p>
 
             <div class="t_iframe" style="min-height: 1000px; padding-top: 0;">
-                <iframe src="https://kdb6.github.io/ck/javascript/effect/quizEffect05.html" frameborder="0"></iframe>
+                <iframe src="https://kdb6.github.io/ck/javascript/effect/quizeffect05.html" frameborder="0"></iframe>
             </div>
 
             <div class="t_link">
-                <a href="https://github.com/KDB6/ck/blob/main/javascript/effect/quizEffect05.html" target="_blank">원본 사이트 보기</a>
+                <a href="https://github.com/KDB6/ck/blob/main/javascript/effect/quizeffect05.html" target="_blank">원본 사이트 보기</a>
             </div>
 
             <h3 class="t_tit2">자바스크립트</h3>
             <p class="t_desc2">
-                데이터 값의 입력과 함수와 forEach문을 사용
+                데이터 값의 입력과 함수와 forEach문을 사용했습니다.<br>
+                이번에는 정답 확인 시에 모든 문제에 대한 풀이와 해설이 나오도록 설정했으며,<br>
+                마지막에는 맞춘 갯수가 나오도록 설정했습니다.
             </p>
             <details>
                 <summary>코드 보기</summary>
