--- a/study/t_study/Ex/study/quiz06.html
+++ b/study/t_study/Ex/study/quiz06.html
@@ -26,7 +26,9 @@
 
             <h3 class="t_tit2">자바스크립트</h3>
             <p class="t_desc2">
-                데이터 값의 입력과 함수와 for문을 사용
+                데이터 값의 입력과 함수와 for문을 사용했습니다.<br>
+                이번에는 문제를 풀 시 슬라이드 형식으로 넘어가는 걸로 바꿨으며,<br>
+                틀린 답을 체크하고 정답 확인 시 정답에 대한 해설이 나오도록 설정했습니다.
             </p>
             <details>
                 <summary>코드 보기</summary>
