--- a/javascript/effect/slideEffect01.html
+++ b/javascript/effect/slideEffect01.html
@@ -8,6 +8,45 @@
 
     <link rel="stylesheet" href="../assets/css/slider.css">
     <link rel="stylesheet" href="../assets/css/dracula.css">
+
+    <style>
+    /* slider */
+    .slider__wrap {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .slider__img {
+        position: relative;
+        width: 800px;
+        height: 450px;
+    }
+    .slider {
+        position: absolute;
+        left: 0;
+        top: 0;
+    }
+    .slider::before {
+        position: absolute;
+        left: 5px;
+        top: 5px;
+        background: rgba(0, 0, 0, 0.4);
+        color: #fff;
+        padding: 5px 10px;
+    }
+    .slider:nth-child(1)::before {content: "이미지1";}
+    .slider:nth-child(2)::before {content: "이미지2";}
+    .slider:nth-child(3)::before {content: "이미지3";}
+    .slider:nth-child(4)::before {content: "이미지4";}
+    .slider:nth-child(5)::before {content: "이미지5";}
+    .slider:nth-child(1) {z-index: 5;}
+    .slider:nth-child(2) {z-index: 4;}
+    .slider:nth-child(3) {z-index: 3;}
+    .slider:nth-child(4) {z-index: 2}
+    .slider:nth-child(5) {z-index: 1;}
+    </style>
 </head>
 <body class="img01 jeju">
 
@@ -28,7 +67,17 @@
 
     <!-- main -->
     <main id="main">
-
+        <section id="sliderType01">
+            <div class="slider__wrap">
+                <div class="slider__img">
+                    <div class="slider"><img src="../assets/img/slide01.jpg" alt="이미지1"></div>
+                    <div class="slider"><img src="../assets/img/slide02.jpg" alt="이미지2"></div>
+                    <div class="slider"><img src="../assets/img/slide03.jpg" alt="이미지3"></div>
+                    <div class="slider"><img src="../assets/img/slide04.jpg" alt="이미지4"></div>
+                    <div class="slider"><img src="../assets/img/slide05.jpg" alt="이미지5"></div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- footer -->
@@ -223,45 +272,40 @@
     </footer>
 
     <script src="../assets/css/js/highlight.min.js"></script>
+    <script src="../assets/css/js/common.js"></script>
     <script>
         hljs.highlightAll();
     </script>
     
     <script>
-        // 모달
-        const modalBtn = document.querySelector(".modal__btn");
-        const modalClose = document.querySelector(".modal__close")
-        const modalCont = document.querySelector(".modal__cont");
+        const sliderWrap = document.querySelector(".slider__wrap")
+        const sliderImg = document.querySelector(".slider__img")
+        const slider = document.querySelectorAll(".slider")
 
-        modalBtn.addEventListener("click", () => {
-            modalCont.classList.add("show");
-        });
-        modalClose.addEventListener("click", () => {
-            modalCont.classList.add("hide");
-        })
+        let currentIndex = 0;                           // 현재 보이는 이미지
+        let silderCount = slider.length;                // 이미지 갯수
 
-        // 탭 메뉴
-        const tabBtn = document.querySelectorAll(".modal__box .tabs > div");
-        const tabCont = document.querySelectorAll(".modal__box .cont > div");
+        setInterval(() => {
+            let nextIndex = (currentIndex + 1) % 5;   // 다음 이미지
 
-        tabBtn.forEach((element, index) => {
+            slider[currentIndex].style.opacity ="0"    // 첫번쨰 이미지를 안보이게
+            slider[nextIndex].style.opacity ="1"    // 첫번째 이미지를 보이게
+
+            currentIndex = nextIndex;
             
-            element.addEventListener("click", (event) => {
-                event.preventDefault();
+        },1000)
 
-                tabBtn.forEach(el => {
-                    el.classList.remove("active");
-                })
+            // slider[1].style.opacity ="0"    // 두번째 이미지를 안보이게
+            // slider[2].style.opacity ="1"    // 두번째 이미지를 보이게
 
-                element.classList.add("active");
+            // slider[2].style.opacity ="0"    // 세번째 이미지를 안보이게
+            // slider[3].style.opacity ="1"    // 세번째 이미지를 보이게
 
-                tabCont.forEach(div => {
-                    div.style.display = "none";
-                });
+            // slider[3].style.opacity ="0"    // 네번째 이미지를 안보이게
+            // slider[4].style.opacity ="1"    // 네번째 이미지를 보이게
 
-                tabCont[index].style.display = "block";
-            });
-        });
+            // slider[4].style.opacity ="0"    // 다섯 번째 이미지를 안보이게
+            // slider[0].style.opacity ="1"    // 첫번째 이미지를 보이게
     </script>
 
 </body>
