--- a/study/t_study/Ex/study/1setting.html
+++ b/study/t_study/Ex/study/1setting.html
@@ -62,6 +62,11 @@
 </code></pre>
             </div>
 
+    <!-- 접기 -->
+    <details>
+        <summary>코드 보기</summary>
+    </details>>
+
     <!-- script -->
     <script src="../css/js/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
