--- a/study/t_study/javascript/study/1setting.html
+++ b/study/t_study/javascript/study/1setting.html
@@ -61,6 +61,11 @@
 <pre><code class="language-js">    
 </code></pre>
             </div>
+    
+    <!-- 접기 -->
+    <details>
+        <summary>코드 보기</summary>
+    </details>>
 
     <!-- script -->
     <script src="../css/js/highlight.min.js"></script>
