--- a/javascript/index.html
+++ b/javascript/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="../assets/png/favicon2.ico">
     <link rel="apple-touch-icon-precomposed" href="../assets/ico/favicon2.png">
     <link rel="icon" href="../assets/ico/favicon2.png">
-    <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
+    <link href="https://webfontworld.github.io/score/SCoreDream.css" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -25,7 +25,7 @@
             flex-wrap: wrap;
             flex-direction: column;
             height: 100vh;
-            font-family: "GmarketSans";
+            font-family: "SCoreDream";
             text-align: center;
             padding: 2vw;
             border: 8px solid #0243f1;
