--- a/javascript/javascript01.html
+++ b/javascript/javascript01.html
@@ -13,7 +13,7 @@
 
 <body>
     <header id="header">
-        <h1><a href="index.html">javascript</a></h1>
+        <h1><a href="index.html">Javascript</a></h1>
         <nav class="header_nav">
             <ul>
                 <li class="active"><a href="javascript01.html">데이터 저장하기</a></li>
@@ -31,20 +31,21 @@
                 <li><a href="javascript11.html">이벤트 객체</a></li>
             </ul>
             <ul class="effect">
-                <li><a href="effect/searchEffect01.html">검색 효과</a></li>
-                <li><a href="effect/quizEffect01.html">퀴즈 효과</a></li>
-                <li><a href="effect/textEffect01.html">텍스트 효과</a></li>
-                <li><a href="effect/mouseEffect01.html">마우스 효과</a></li>
-                <li><a href="effect/sliderEffect01.html">슬라이드 효과</a></li>
-                <li><a href="effect/parallaxEffect01.html">페랠랙스 효과</a></li>
-                <li><a href="effect/gameEffect01.html">게임 효과</a></li>
+                <li><a href="effect/searchEffect.html">검색 효과</a></li>
+                <li><a href="effect/quizEffect.html">퀴즈 효과</a></li>
+                <li><a href="effect/dataEffect.html">데이터 효과</a></li>
+                <li><a href="effect/mouseEffect.html">마우스 효과</a></li>
+                <li><a href="effect/sliderEffect.html">슬라이드 효과</a></li>
+                <li><a href="effect/parallaxEffect.html">페랠랙스 효과</a></li>
+                <li><a href="effect/gameEffect.html">게임 효과</a></li>
             </ul>
         </nav>
     </header>
     <!-- //header -->
 
     <main id="main">
-        <div class="main_menu">
+        <div class="container">
+            <div class="main_menu">
             <ul>
                 <li><a href="#sample01">01. 변수 : 데이터 저장</a></li>
                 <li><a href="#sample02">02. 변수 : 데이터 저장 + 데이터 변경</a></li>
@@ -64,9 +65,9 @@
                 <li><a href="#sample16">16. 객체 : 데이터 저장(키와 값) : 표현 방법7</a></li>
                 <li><a href="#sample17">17. 객체 : 데이터 저장(키와 값) : 표현 방법8</a></li>
             </ul>
-        </div>
+            </div>
 
-        <div class="main_sample">
+            <div class="main_sample">
             <!-- 01 -->
             <div id="sample01" class="sample">
                 <h3>01. 변수 : 데이터 저장</h3>
@@ -118,7 +119,7 @@
                         <summary>결과보기</summary>
                         <div class="sample02_result">
                             300<br>
-                            400<br>
+                            400<br>                         
                             jquery
                         </div>
                     </details>
@@ -621,9 +622,8 @@
                     </details>
                 </div>
             </div>
+            </div>
         </div>
-
-        <div id="main_desc"></div>
     </main>
     <!-- //main -->
 
