--- a/javascript/javascript02.html
+++ b/javascript/javascript02.html
@@ -13,7 +13,7 @@
 
 <body>
     <header id="header">
-        <h1><a href="index.html">javascript</a></h1>
+        <h1><a href="index.html">Javascript</a></h1>
         <nav class="header_nav">
             <ul>
                 <li><a href="javascript01.html">데이터 저장하기</a></li>
@@ -31,19 +31,20 @@
                 <li><a href="javascript11.html">이벤트 객체</a></li>
             </ul>
             <ul class="effect">
-                <li><a href="effect/searchEffect01.html">검색 효과</a></li>
-                <li><a href="effect/quizEffect01.html">퀴즈 효과</a></li>
-                <li><a href="effect/textEffect01.html">텍스트 효과</a></li>
-                <li><a href="effect/mouseEffect01.html">마우스 효과</a></li>
-                <li><a href="effect/sliderEffect01.html">슬라이드 효과</a></li>
-                <li><a href="effect/parallaxEffect01.html">페랠랙스 효과</a></li>
-                <li><a href="effect/gameEffect01.html">게임 효과</a></li>
+                <li><a href="effect/searchEffect.html">검색 효과</a></li>
+                <li><a href="effect/quizEffect.html">퀴즈 효과</a></li>
+                <li><a href="effect/dataEffect.html">데이터 효과</a></li>
+                <li><a href="effect/mouseEffect.html">마우스 효과</a></li>
+                <li><a href="effect/sliderEffect.html">슬라이드 효과</a></li>
+                <li><a href="effect/parallaxEffect.html">페랠랙스 효과</a></li>
+                <li><a href="effect/gameEffect.html">게임 효과</a></li>
             </ul>
         </nav>
     </header>
     <!-- //header -->
     <main id="main">
-        <div class="main_menu">
+        <div class="container">
+            <div class="main_menu">
             <ul>
                 <li><a href="#sample01">01. 변수 : 데이터 불러오기</a></li>
                 <li><a href="#sample02">02. 상수 : 데이터 불러오기</a></li>
@@ -69,8 +70,9 @@
                 <li><a href="#sample22">22. 객체 : 데이터 불러오기 : 비구조화 할당</a></li>
                 <li><a href="#sample23">23. 객체 : 데이터 불러오기 : 객체구조분해할당</a></li>
             </ul>
-        </div>
-        <div class="main_sample">
+            </div>
+
+            <div class="main_sample">
             <!-- 01 -->
             <div id="sample01" class="sample">
                 <h3>01. 변수 : 데이터 불러오기</h3>
@@ -597,6 +599,7 @@
                 </div>
             </div>
 
+            </div>
         </div>
     </main>
     <!-- //main -->
