--- a/javascript/javascript05.html
+++ b/javascript/javascript05.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header id="header">
-        <h1><a href="index.html">javascript</a></h1>
+        <h1><a href="index.html">Javascript</a></h1>
         <nav class="header_nav">
             <ul>
                 <li><a href="javascript01.html">데이터 저장하기</a></li>
@@ -29,13 +29,13 @@
                 <li><a href="javascript11.html">이벤트 객체</a></li>
             </ul>
             <ul class="effect">
-                <li><a href="effect/searchEffect01.html">검색 효과</a></li>
-                <li><a href="effect/quizEffect01.html">퀴즈 효과</a></li>
-                <li><a href="effect/textEffect01.html">텍스트 효과</a></li>
-                <li><a href="effect/mouseEffect01.html">마우스 효과</a></li>
-                <li><a href="effect/sliderEffect01.html">슬라이드 효과</a></li>
-                <li><a href="effect/parallaxEffect01.html">페랠랙스 효과</a></li>
-                <li><a href="effect/gameEffect01.html">게임 효과</a></li>
+                <li><a href="effect/searchEffect.html">검색 효과</a></li>
+                <li><a href="effect/quizEffect.html">퀴즈 효과</a></li>
+                <li><a href="effect/dataEffect.html">데이터 효과</a></li>
+                <li><a href="effect/mouseEffect.html">마우스 효과</a></li>
+                <li><a href="effect/sliderEffect.html">슬라이드 효과</a></li>
+                <li><a href="effect/parallaxEffect.html">페랠랙스 효과</a></li>
+                <li><a href="effect/gameEffect.html">게임 효과</a></li>
             </ul>
         </nav>
     </header>
@@ -43,7 +43,8 @@
 
     <!-- main_menu -->
     <main id="main">
-        <div class="main_menu">
+        <div class="container">
+            <div class="main_menu">
             <ul>
                 <li><a href="#sample01">01. 문자열 : 문자열 결합 / 템플릿 문자열</a></li>
 
@@ -84,7 +85,7 @@
                 <li><a href="#sample01">10. 문자열 메서드 : 검색 : startsWith() : 문자열 포함 여부 검색 : 반환(불린)</a></li>
                 <li><a href="#sample01">11. 문자열 메서드 : 검색 : endsWith() : 문자열 포함 여부 검색 : 반환(불린)</a></li>
             </ul>
-        </div>
+            </div>
 
             <div class="main_sample">
 
@@ -610,7 +611,7 @@
                 </div>
 
             </div>
-        <div id="main_desc"></div>
+        </div>
     </main>
     <!-- //main -->
 
