--- a/study/t_study/Ex/study/gsap.html
+++ b/study/t_study/Ex/study/gsap.html
@@ -14,7 +14,7 @@
         <div class="document">
             <h2 class="t_tit">GSAP</h2>
             <p class="t_desc2">
-                GSAP란, GrennSock에서 만든 자바스크립트 애니메이션 라이브러리입니다.<br>
+                GSAP란, GrennSock에서 만든 자바스크립트 <i>애니메이션</i> 라이브러리입니다.<br>
                 일반적으로 애니메이션 효과는 CSS로 처리하거나 제이쿼리(JQuery) 사용으로 구현하는 것이 일반적이지만,
                 GSAP 위 두 개에 비해 사용하기 편하며 퍼포먼스도 좋습니다.
             </p>
@@ -42,7 +42,7 @@
 </code></pre>
             </div>
             <h3 class="t_tit2">결과물</h3>
-            <p class="t_desc">GASP를 이용해 슬라이드 애니메이션을 넣은 결과물입니다.</p>
+            <p class="t_desc">GASP를 이용해 슬라이드 애니메이션을 만든 결과물입니다.</p>
             <div class="t_iframe" style="min-height: 920px; padding-top: 0;">
                 <iframe src="https://kdb6.github.io/ck/javascript/effect/sliderEffect02.html" frameborder="0"></iframe>
             </div>
