--- a/site/cardType/cardType02.html
+++ b/site/cardType/cardType02.html
@@ -10,7 +10,7 @@
         @import url('https://webfontworld.github.io/gmarket/GmarketSans.css');
 
         .gmark {
-            font-family: GmarketSans;
+            font-family: "GmarketSans";
             font-weight: 500;
         }
 
