--- a/site/imageType/imageType02.html
+++ b/site/imageType/imageType02.html
@@ -57,6 +57,7 @@
         .image {
             width: 32%;
             overflow: hidden;
+            position: relative;
         }
         .image__box {}
         .image__box img {
