--- a/site/textType/textType01.html
+++ b/site/textType/textType01.html
@@ -160,7 +160,7 @@
                     </p>
                 </div>
                 <div class="the">
-                    <p>더보기</p>
+                    <p><a href="">더보기</a></p>
                 </div>
             </article>
 
@@ -178,7 +178,7 @@
                     </p>
                 </div>
                 <div class="the">
-                    <p>더보기</p>
+                    <p><a href="">더보기</a></p>
                 </div>
             </article>
 
@@ -196,7 +196,7 @@
                     </p>
                 </div>
                 <div class="the">
-                    <p>더보기</p>
+                    <p><a href="">더보기</a></p>
                 </div>
             </article>
 
@@ -214,7 +214,7 @@
                     </p>
                 </div>
                 <div class="the">
-                    <p>더보기</p>
+                    <p><a href="">더보기</a></p>
                 </div>
             </article>
 
@@ -232,7 +232,7 @@
                     </p>
                 </div>
                 <div class="the">
-                    <p>더보기</p>
+                    <p><a href="">더보기</a></p>
                 </div>
             </article>
 
@@ -250,7 +250,7 @@
                     </p>
                 </div>
                 <div class="the">
-                    <p>더보기</p>
+                    <p><a href="">더보기</a></p>
                 </div>
             </article>
         </div>
