--- a/study/t_study/Ex/study/1setting.html
+++ b/study/t_study/Ex/study/1setting.html
@@ -65,7 +65,7 @@
     <!-- 접기 -->
     <details>
         <summary>코드 보기</summary>
-    </details>>
+    </details>
 
     <!-- script -->
     <script src="../css/js/highlight.min.js"></script>
