--- a/site/cardType/cardType02_22.08.10.html
+++ b/site/cardType/cardType02_22.08.10.html
@@ -9,7 +9,7 @@
         /* fonts */
         @import url('https://webfontworld.github.io/gmarket/GmarketSans.css');    /* 폰트 */
 
-        .nexon {
+        .gmark {
             font-family: 'GmarketSans';
             font-weight: 400;
         }
@@ -94,7 +94,7 @@
     </style>
 </head>
 <body>
-    <section id="cardType01" class="card__wrap nexon section">
+    <section id="cardType01" class="card__wrap gmark section">
         <h2>Steady Every Wear</h2>
         <p>
             지속적인 가치를 지닌 라이프 스타일 제품을 만들기 위해 노력합니다.<br>
