--- a/site/textType/textType01.html
+++ b/site/textType/textType01.html
@@ -62,7 +62,7 @@
             margin-bottom: 70px;
         }
 
-        /* textType */
+        /* textType01 */
         .text {
             width: 346px;
             height: 224px;
