--- a/site/textType/textType01.html
+++ b/site/textType/textType01.html
@@ -149,7 +149,7 @@
             <article class="text">
                 <div class="one01">
                     <figure class="circle">
-                        <img src="/site/textType/img/Dribbble.svg" alt="Dribbble">
+                        <img src="img/Dribbble.svg" alt="Dribbble">
                     </figure>
                 </div>
                 <div class="desc">
@@ -167,7 +167,7 @@
             <article class="text">
                 <div class="one02">
                     <figure class="circle">
-                        <img src="/site/textType/img/Discord.svg" alt="Discord">
+                        <img src="img/Discord.svg" alt="Discord">
                     </figure>
                 </div> 
                 <div class="desc">
@@ -185,7 +185,7 @@
             <article class="text">
                 <div class="one03">
                     <figure class="circle">
-                        <img src="/site/textType/img/Facebook.svg" alt="Facebook">
+                        <img src="img/Facebook.svg" alt="Facebook">
                     </figure>
                 </div> 
                 <div class="desc">
@@ -203,7 +203,7 @@
             <article class="text">
                 <div class="one04">
                     <figure class="circle">
-                        <img src="/site/textType/img/Twiiter.svg" alt="Twiiter">
+                        <img src="img/Twiiter.svg" alt="Twiiter">
                     </figure>
                 </div> 
                 <div class="desc">
@@ -221,7 +221,7 @@
             <article class="text">
                 <div class="one05">
                     <figure class="circle">
-                        <img src="/site/textType/img/Instagram.svg" alt="Instagram">
+                        <img src="img/Instagram.svg" alt="Instagram">
                     </figure>
                 </div> 
                 <div class="desc">
@@ -239,7 +239,7 @@
             <article class="text">
                 <div class="one06">
                     <figure class="circle">
-                        <img src="/site/textType/img/YouTube.svg" alt="YouTube">
+                        <img src="img/YouTube.svg" alt="YouTube">
                     </figure>
                 </div> 
                 <div class="desc">
