--- a/site/textType/textType02.html
+++ b/site/textType/textType02.html
@@ -63,41 +63,98 @@
         }
 
         /* textType02 */
+        .text__inner {
+            display: flex;
+        }
         .main {
-            width: 373px;
-            height: 428px;
+            margin-right: 58px;
+        }
+        .t_desc > h3 {
+            font-size: 18px;
+            margin-bottom: 10px;
+            padding: 6px 45px 6px 45px;
+        }
+        .t_desc > h2 {
+            font-size: 50px;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+        .t_desc > p {
+            font-size: 18px;
+            color: #666;
+        }
+        .h3box {
+            width: 90px;
+            border-radius: 25px;
+            background: #000a67;
+            color: #ffffff;
+            text-align: center;
         }
         .aside {
             width: 767px;
             height: 428px;
+            display: flex;
+            flex-wrap: wrap;
+        }
+        .text {
+            width: 320px;
+            height: 194px;
+            margin-right: 30px;
         }
         .circle {
             width: 24px;
             height: 24px;
+            padding: 18px;
+            margin-top: 5px;
+            margin-bottom: 5px;
+        }
+        .desc > h2 {
+            margin-bottom: 20px;
+        }
+        .desc > p {
+            font-weight: 300;
         }
         .one01 {
             width: 60px;
             height: 60px;
-            background: #dbe9ff;
+            background: #FFFADD;
             border-radius: 50%;
+            margin-bottom: 10px;
         }
         .one02 {
             width: 60px;
             height: 60px;
-            background: #eeebff;
+            background: #DAFFEF;
             border-radius: 50%;
+            margin-bottom: 10px;
         }
         .one03 {
             width: 60px;
             height: 60px;
-            background: #ffece7;
+            background: #E4F2FF;
             border-radius: 50%;
+            margin-bottom: 10px;
         }
         .one04 {
             width: 60px;
             height: 60px;
-            background: #FFEDF3;
+            background: #FFE2E2;
             border-radius: 50%;
+            margin-bottom: 10px;
+        }
+        .one05 {
+            width: 60px;
+            height: 60px;
+            background: #E1FAFF;
+            border-radius: 50%;
+            margin-bottom: 10px;
+        }
+        .one06 {
+            width: 60px;
+            height: 60px;
+            background: #FDEFFF;
+            border-radius: 50%;
+            margin-bottom: 10px;
         }
     </style>
 </head>
@@ -106,7 +163,7 @@
         <div class="container text__inner">
             <div class="main">
                 <div class="t_desc">
-                    <h3>About us</h3>
+                    <h3 class="h3box">About us</h3>
                     <h2>Steady<br>Every Wear</h2>
                     <p>지속적인 가치를 지닌 라이프 스타일 제품<br>을 만들기 위해 노력합니다.</p>
                 </div>
@@ -115,7 +172,7 @@
                 <article class="text">
                     <div class="one01">
                         <figure class="circle">
-                            <img src="/site/img/Dribbble.svg" alt="Dribbble">
+                            <img src="img/Dribbble.svg" alt="Dribbble">
                         </figure>
                     </div>
                     <div class="desc">
@@ -130,7 +187,7 @@
                 <article class="text">
                     <div class="one02">
                         <figure class="circle">
-                            <img src="/site/img/Twiiter.svg" alt="Twiiter">
+                            <img src="img/Twiiter.svg" alt="Twiiter">
                         </figure>
                     </div>
                     <div class="desc">
@@ -145,7 +202,7 @@
                 <article class="text">
                     <div class="one03">
                         <figure class="circle">
-                            <img src="/site/img/Instagram.svg" alt="Instagram">
+                            <img src="img/Instagram.svg" alt="Instagram">
                         </figure>
                     </div>
                     <div class="desc">
@@ -160,7 +217,7 @@
                 <article class="text">
                     <div class="one04">
                         <figure class="circle">
-                            <img src="/site/img/YouTube.svg" alt="YouTube">
+                            <img src="img/YouTube.svg" alt="YouTube">
                         </figure>
                     </div>
                     <div class="desc">
