--- a/study/t_study/Ex/study/textType03.html
+++ b/study/t_study/Ex/study/textType03.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>텍스트 타입 01</title>
+    <title>텍스트 타입 03</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/dracula.css">
 </head>
 <body>
     <main id="main">
         <div class="document">
-            <h2 class="t_tit">텍스트 타입 01</h2>
+            <h2 class="t_tit">텍스트 타입 03</h2>
             <p class="t_desc2">
                 이번 시간에는 텍스트 타입 사이트를 만들어 봤습니다.
             </p>
             <div class="t_iframe">
-                <iframe width="650" height="400" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FoLRt8dyA3nlh2tlGzhrd3y%2F%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0%3Fnode-id%3D1440%253A1664" allowfullscreen></iframe>
+                <iframe width="650" height="400" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FoLRt8dyA3nlh2tlGzhrd3y%2F%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0%3Fnode-id%3D1554%253A1762" allowfullscreen></iframe>
             </div>
 
             <h3 class="t_tit2">Site HTML</h3>
@@ -27,114 +27,67 @@
             </p>
             <div class="t_code">
 <pre><code class="language.js">    &lt;section id="textType" class="text__wrap nexon section">
-        &lt;h3>텍스트 유형&lt;/h3>
-        &lt;h2>POTTERY&lt;/h2>
-        &lt;div class="container text__inner">
+        &lt;h2>Review&lt;/h2>
+        &lt;p>이용하신 분들에 후기입니다.&lt;/p>
+        &lt;div class="text__inner container">
             &lt;article class="text">
-                &lt;div class="one01">
-                    &lt;figure class="circle">
-                        &lt;img src="/site/img/Dribbble.svg" alt="Dribbble">
-                    &lt;/figure>
-                &lt;/div>
-                &lt;div class="desc">
-                    &lt;h2>포터리&lt;/h2>
-                    &lt;p>
-                        우리는 옷을 만들기 위해 최선의 노력을 다합니다.
-                        특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.
+                &lt;div class="text__body">
+                    &lt;p class="desc">
+                        이 디자인 나쁘지 않은 것 같아요! 첨에는 살까 말까 망설여 졌는데 나쁘지도 않고 계속 입다보니깐 맘에 듭니다. 역시 믿고 사길 잘했네여!
                     &lt;/p>
                 &lt;/div>
-                &lt;div class="the">
-                    &lt;p>&lt;a href="">더보기&lt;/a>&lt;/p>
+                &lt;div class="desc2">
+                    &lt;figure class="circle">
+                        &lt;img src="img/Coffee.svg" alt="Coffee">
+                    &lt;/figure>
+                    &lt;h2>
+                        안현규
+                        &lt;img src="img/star.svg" class="star" alt="star">
+                    &lt;/h2>
+                    &lt;p>지나가는 시민&lt;/p>
+                &lt;/div>
+                &lt;div class="good">
+                    &lt;p>자세히 보기&lt;/p>
                 &lt;/div>
             &lt;/article>
-
             &lt;article class="text">
-                &lt;div class="one02">
-                    &lt;figure class="circle">
-                        &lt;img src="/site/img/Discord.svg" alt="Discord">
-                    &lt;/figure>
-                &lt;/div> 
-                &lt;div class="desc">
-                    &lt;h2>TPO&lt;/h2>
-                    &lt;p>
-                        우리는 옷을 만들기 위해 최선의 노력을 다합니다.
-                        특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.
+                &lt;div class="text__body">
+                    &lt;p class="desc">
+                        아 이번에 춤을 춰야하는데, 뭘 춰야 할 지... 이거 떨어질거라 생각을 못해봤는데, 시간을 다시 돌릴 수 있을까라고 생각을 해봅니다. 첫 데뷔를 이렇게 하다니 너무 좋네여!
                     &lt;/p>
                 &lt;/div>
-                &lt;div class="the">
-                    &lt;p>&lt;a href="">더보기&lt;/a>&lt;/p>
+                &lt;div class="desc2">
+                    &lt;figure class="circle">
+                        &lt;img src="img/Coffee.svg" alt="Coffee">
+                    &lt;/figure>
+                    &lt;h2>
+                        이강현
+                        &lt;img src="img/star.svg" class="star" alt="star">
+                    &lt;/h2>
+                    &lt;p>마피아&lt;/p>
+                &lt;/div>
+                &lt;div class="good">
+                    &lt;p>자세히 보기&lt;/p>
                 &lt;/div>
             &lt;/article>
-
             &lt;article class="text">
-                &lt;div class="one03">
-                    &lt;figure class="circle">
-                        &lt;img src="/site/img/Facebook.svg" alt="Facebook">
-                    &lt;/figure>
-                &lt;/div> 
-                &lt;div class="desc">
-                    &lt;h2>원단&lt;/h2>
-                    &lt;p>
-                        우리는 옷을 만들기 위해 최선의 노력을 다합니다.
-                        특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.
+                &lt;div class="text__body">
+                    &lt;p class="desc">
+                        오오! 너무 맘에 들어요. 이거 사이즈도 너무 잘 맞고 인생 핏을 찾은 것 같습니다..!! 조아요!
                     &lt;/p>
                 &lt;/div>
-                &lt;div class="the">
-                    &lt;p>&lt;a href="">더보기&lt;/a>&lt;/p>
-                &lt;/div>
-            &lt;/article>
-
-            &lt;article class="text">
-                &lt;div class="one04">
+                &lt;div class="desc2">
                     &lt;figure class="circle">
-                        &lt;img src="/site/img/Twiiter.svg" alt="Twiiter">
+                        &lt;img src="img/Coffee.svg" alt="Coffee">
                     &lt;/figure>
-                &lt;/div> 
-                &lt;div class="desc">
-                    &lt;h2>Brand&lt;/h2>
-                    &lt;p>
-                        우리는 옷을 만들기 위해 최선의 노력을 다합니다.
-                        특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.
-                    &lt;/p>
+                    &lt;h2>
+                        서지우
+                        &lt;img src="img/star.svg" class="star" alt="star">
+                    &lt;/h2>
+                    &lt;p>조커&lt;/p>
                 &lt;/div>
-                &lt;div class="the">
-                    &lt;p>&lt;a href="">더보기&lt;/a>&lt;/p>
-                &lt;/div>
-            &lt;/article>
-
-            &lt;article class="text">
-                &lt;div class="one05">
-                    &lt;figure class="circle">
-                        &lt;img src="/site/img/Instagram.svg" alt="Instagram">
-                    &lt;/figure>
-                &lt;/div> 
-                &lt;div class="desc">
-                    &lt;h2>ADVOCACY&lt;/h2>
-                    &lt;p>
-                        우리는 옷을 만들기 위해 최선의 노력을 다합니다.
-                        특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.
-                    &lt;/p>
-                &lt;/div>
-                &lt;div class="the">
-                    &lt;p>&lt;a href="">더보기&lt;/a>&lt;/p>
-                &lt;/div>
-            &lt;/article>
-
-            &lt;article class="text">
-                &lt;div class="one06">
-                    &lt;figure class="circle">
-                        &lt;img src="/site/img/YouTube.svg" alt="YouTube">
-                    &lt;/figure>
-                &lt;/div> 
-                &lt;div class="desc">
-                    &lt;h2>Our Progress&lt;/h2>
-                    &lt;p>
-                        우리는 옷을 만들기 위해 최선의 노력을 다합니다.
-                        특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.
-                    &lt;/p>
-                &lt;/div>
-                &lt;div class="the">
-                    &lt;p>&lt;a href="">더보기&lt;/a>&lt;/p>
+                &lt;div class="good">
+                    &lt;p>자세히 보기&lt;/p>
                 &lt;/div>
             &lt;/article>
         &lt;/div>
@@ -282,17 +235,17 @@
     }
 </code></pre>
                 <div class="t_link">
-                    <a href="https://github.com/KDB6/ck/blob/main/site/textType/textType01.html" target="_blank">코드 원본 보기</a>
+                    <a href="https://github.com/KDB6/ck/blob/main/site/textType/textType03.html" target="_blank">코드 원본 보기</a>
                 </div>
             </div>
 
             <h3 class="t_tit2">결과물</h3>
             <div class="t_iframe" style="min-height: 920px; padding-top: 0;">
-                <iframe src="https://kdb6.github.io/ck/site/textType/textType01.html" frameborder="0"></iframe>
+                <iframe src="https://kdb6.github.io/ck/site/textType/textType03.html" frameborder="0"></iframe>
             </div>
     
             <div class="t_link">
-                <a href="https://kdb6.github.io/ck/site/textType/textType01.html" target="_blank">원본 사이트 보기</a>
+                <a href="https://kdb6.github.io/ck/site/textType/textType03.html" target="_blank">원본 사이트 보기</a>
             </div>
 
         </div>
