--- a/site/site1/index.html
+++ b/site/site1/index.html
@@ -20,6 +20,7 @@
     <!-- CSS(섹션별) -->
     <link rel="stylesheet" href="assets/css/card.css">
     <link rel="stylesheet" href="assets/css/image.css">
+    <link rel="stylesheet" href="assets/css/text.css">
 </head>
 <body>
     <div id="skip">
@@ -138,8 +139,41 @@
         </section>
         <!-- //banner -->
 
-        <section id="textType" class="text__wrap">
-            <h2>텍스트 영역</h2>
+        <section id="textType" class="text__warp nexon section">
+            <span>텍스트 유형 01</span>
+            <h2 class="mb70">POTTERY</h2>
+            <div class="text__inner container">
+                <div class="text t1">
+                    <h3 class="text__title">포터리</h3>
+                    <p class="text__desc">우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.</p>
+                    <a class="text__btn" href="/">더보기</a>
+                </div>
+                <div class="text t2">
+                    <h3 class="text__title">TPO</h3>
+                    <p class="text__desc">우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.</p>
+                    <a class="text__btn" href="/">더보기</a>
+                </div>
+                <div class="text t3">
+                    <h3 class="text__title">원단</h3>
+                    <p class="text__desc">우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.</p>
+                    <a class="text__btn" href="/">더보기</a>
+                </div>
+                <div class="text t4">
+                    <h3 class="text__title">Brand</h3>
+                    <p class="text__desc">우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.</p>
+                    <a class="text__btn" href="/">더보기</a>
+                </div>
+                <div class="text t5">
+                    <h3 class="text__title">ADVOCACY</h3>
+                    <p class="text__desc">우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.</p>
+                    <a class="text__btn" href="/">더보기</a>
+                </div>
+                <div class="text t6">
+                    <h3 class="text__title">Our Progress</h3>
+                    <p class="text__desc">우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.</p>
+                    <a class="text__btn" href="/">더보기</a>
+                </div>
+            </div>
         </section>
         <!-- //text -->
     </main>
