--- a/site/textType/textType01.html
+++ b/site/textType/textType01.html
@@ -12,7 +12,6 @@
 
         .nexon {
             font-family: "NexonLv1Gothic";
-            font-weight: 300;
         }
 
         /* reset */
@@ -61,198 +60,126 @@
             text-align: center;
             margin-bottom: 70px;
         }
+        .section > span {
+            display: block;
+            text-align: center;
+            font-size: 16px;
+            text-decoration: underline;
+            margin-bottom: 16px;
+        }
+        .mb70 {
+            margin-bottom: 70px !important;
+        }
 
-        /* textType01 */
-        .text {
-            width: 346px;
-            height: 224px;
-            margin-bottom: 20px;
-            padding: 20px;
-        }
-        .text:hover {
-            background: #f1f1f1;
-            border-radius: 15px;
-            transition: all 0.3s ease-in;
-        }
+        /* textType */
         .text__inner {
             display: flex;
             flex-wrap: wrap;
+            justify-content: space-between;
         }
-        .circle {
-            width: 24px;
-            height: 24px;
-            padding: 18px;
+        .text {
+            width: 32%;
+            margin-bottom: 2%;
+            padding: 20px;
+            box-sizing: border-box;
+            border-radius: 10px;
+            transition: background 0.4s;
         }
-        .desc {
+        .text:hover {
+            background: #f5f5f5;
         }
-        .desc > h2 {
+        .text__title {
             font-size: 24px;
+            line-height: 1;
             margin-bottom: 10px;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            position: relative;
+            padding-top: 75px;
         }
-        .desc > p {
+        .text__desc {
             font-size: 18px;
+            font-weight: 300;
             line-height: 1.4;
             margin-bottom: 20px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 3; 
+            -webkit-box-orient: vertical;
         }
-        .one01 {
+
+        .text__title::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;
             width: 60px;
             height: 60px;
-            background: #FFFADD;
-            border-radius: 50%;
-            margin-bottom: 10px;
+            background: url(img/text_icon.svg);
         }
-        .one02 {
-            width: 60px;
-            height: 60px;
-            background: #DAFFEF;
-            border-radius: 50%;
-            margin-bottom: 10px;
+        .text.t1 .text__title::before {
+            background-position: 0 0;
         }
-        .one03 {
-            width: 60px;
-            height: 60px;
-            background: #E4F2FF;
-            border-radius: 50%;
-            margin-bottom: 10px;
+        .text.t2 .text__title::before {
+            background-position: -60px 0;
         }
-        .one04 {
-            width: 60px;
-            height: 60px;
-            background: #FFE2E2;
-            border-radius: 50%;
-            margin-bottom: 10px;
+        .text.t3 .text__title::before {
+            background-position: -120px 0;
         }
-        .one05 {
-            width: 60px;
-            height: 60px;
-            background: #E1FAFF;
-            border-radius: 50%;
-            margin-bottom: 10px;
+        .text.t4 .text__title::before {
+            background-position: -180px 0;
         }
-        .one06 {
-            width: 60px;
-            height: 60px;
-            background: #FDEFFF;
-            border-radius: 50%;
-            margin-bottom: 10px;
+        .text.t5 .text__title::before {
+            background-position: -240px 0;
         }
-        .the {
+        .text.t6 .text__title::before {
+            background-position: -300px 0;
+        }
+        .text__btn {
+            font-size: 16px;
+            line-height: 1;
             text-decoration: underline;
+            text-underline-position: under;
+            color: #666;
         }
     </style>
 </head>
 <body>
-    <section id="textType" class="text__wrap nexon section">
-        <h3>텍스트 유형</h3>
-        <h2>POTTERY</h2>
-        <div class="container text__inner">
-            <article class="text">
-                <div class="one01">
-                    <figure class="circle">
-                        <img src="img/Dribbble.svg" alt="Dribbble">
-                    </figure>
-                </div>
-                <div class="desc">
-                    <h2>포터리</h2>
-                    <p>
-                        우리는 옷을 만들기 위해 최선의 노력을 다합니다.
-                        특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.
-                    </p>
-                </div>
-                <div class="the">
-                    <p><a href="">더보기</a></p>
-                </div>
-            </article>
-
-            <article class="text">
-                <div class="one02">
-                    <figure class="circle">
-                        <img src="img/Discord.svg" alt="Discord">
-                    </figure>
-                </div> 
-                <div class="desc">
-                    <h2>TPO</h2>
-                    <p>
-                        우리는 옷을 만들기 위해 최선의 노력을 다합니다.
-                        특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.
-                    </p>
-                </div>
-                <div class="the">
-                    <p><a href="">더보기</a></p>
-                </div>
-            </article>
-
-            <article class="text">
-                <div class="one03">
-                    <figure class="circle">
-                        <img src="img/Facebook.svg" alt="Facebook">
-                    </figure>
-                </div> 
-                <div class="desc">
-                    <h2>원단</h2>
-                    <p>
-                        우리는 옷을 만들기 위해 최선의 노력을 다합니다.
-                        특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.
-                    </p>
-                </div>
-                <div class="the">
-                    <p><a href="">더보기</a></p>
-                </div>
-            </article>
-
-            <article class="text">
-                <div class="one04">
-                    <figure class="circle">
-                        <img src="img/Twiiter.svg" alt="Twiiter">
-                    </figure>
-                </div> 
-                <div class="desc">
-                    <h2>Brand</h2>
-                    <p>
-                        우리는 옷을 만들기 위해 최선의 노력을 다합니다.
-                        특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.
-                    </p>
-                </div>
-                <div class="the">
-                    <p><a href="">더보기</a></p>
-                </div>
-            </article>
-
-            <article class="text">
-                <div class="one05">
-                    <figure class="circle">
-                        <img src="img/Instagram.svg" alt="Instagram">
-                    </figure>
-                </div> 
-                <div class="desc">
-                    <h2>ADVOCACY</h2>
-                    <p>
-                        우리는 옷을 만들기 위해 최선의 노력을 다합니다.
-                        특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.
-                    </p>
-                </div>
-                <div class="the">
-                    <p><a href="">더보기</a></p>
-                </div>
-            </article>
-
-            <article class="text">
-                <div class="one06">
-                    <figure class="circle">
-                        <img src="img/YouTube.svg" alt="YouTube">
-                    </figure>
-                </div> 
-                <div class="desc">
-                    <h2>Our Progress</h2>
-                    <p>
-                        우리는 옷을 만들기 위해 최선의 노력을 다합니다.
-                        특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.
-                    </p>
-                </div>
-                <div class="the">
-                    <p><a href="">더보기</a></p>
-                </div>
-            </article>
+    <section id="textType" class="text__warp nexon section">
+        <span>텍스트 유형 01</span>
+        <h2 class="mb70">POTTERY</h2>
+        <div class="text__inner container">
+            <div class="text t1">
+                <h3 class="text__title">포터리</h3>
+                <p class="text__desc">우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.</p>
+                <a class="text__btn" href="/">더보기</a>
+            </div>
+            <div class="text t2">
+                <h3 class="text__title">TPO</h3>
+                <p class="text__desc">우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.</p>
+                <a class="text__btn" href="/">더보기</a>
+            </div>
+            <div class="text t3">
+                <h3 class="text__title">원단</h3>
+                <p class="text__desc">우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.</p>
+                <a class="text__btn" href="/">더보기</a>
+            </div>
+            <div class="text t4">
+                <h3 class="text__title">Brand</h3>
+                <p class="text__desc">우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.</p>
+                <a class="text__btn" href="/">더보기</a>
+            </div>
+            <div class="text t5">
+                <h3 class="text__title">ADVOCACY</h3>
+                <p class="text__desc">우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.</p>
+                <a class="text__btn" href="/">더보기</a>
+            </div>
+            <div class="text t6">
+                <h3 class="text__title">Our Progress</h3>
+                <p class="text__desc">우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.</p>
+                <a class="text__btn" href="/">더보기</a>
+            </div>
         </div>
     </section>
 </body>
