--- a/study/t_study/Ex/study/headerType01.html
+++ b/study/t_study/Ex/study/headerType01.html
@@ -25,25 +25,25 @@
                 사이트를 코딩하는 데에 필요한 HTML의 구조를 잡아줍니다.
             </p>
             <div class="t_code">
-<pre><code>    &lt;section id="headerType" class="header__wrap nexon">
-    &lt;div class="header__inner">
-        &lt;div class="header__logo">
-            &lt;a href="#">web&lt;em>site&lt;/em>&lt;/a>
+<pre><code class="language.js">    &lt;section id="headerType" class="header__wrap nexon">
+        &lt;div class="header__inner">
+            &lt;div class="header__logo">
+                &lt;a href="#">web&lt;em>site&lt;/em>&lt;/a>
+            &lt;/div>
+            &lt;div class="header__menu">
+                &lt;ul>
+                    &lt;li>&lt;a href="#">헤더 영역&lt;/a>&lt;/li>
+                    &lt;li>&lt;a href="#">슬라이드 영역&lt;/a>&lt;/li>
+                    &lt;li>&lt;a href="#">배너 영역&lt;/a>&lt;/li>
+                    &lt;li>&lt;a href="#">컨테이너 영역&lt;/a>&lt;/li>
+                    &lt;li>&lt;a href="#">푸터 영역&lt;/a>&lt;/li>
+                &lt;/ul>
+            &lt;/div>
+            &lt;div class="header__member">
+                &lt;a href="#">로그인&lt;/a>
+            &lt;/div>
         &lt;/div>
-        &lt;div class="header__menu">
-            &lt;ul>
-                &lt;li>&lt;a href="#">헤더 영역&lt;/a>&lt;/li>
-                &lt;li>&lt;a href="#">슬라이드 영역&lt;/a>&lt;/li>
-                &lt;li>&lt;a href="#">배너 영역&lt;/a>&lt;/li>
-                &lt;li>&lt;a href="#">컨테이너 영역&lt;/a>&lt;/li>
-                &lt;li>&lt;a href="#">푸터 영역&lt;/a>&lt;/li>
-            &lt;/ul>
-        &lt;/div>
-        &lt;div class="header__member">
-            &lt;a href="#">로그인&lt;/a>
-        &lt;/div>
-    &lt;/div>
-&lt;/section>
+    &lt;/section>
 </code></pre>
             </div>
 
@@ -53,7 +53,7 @@
                 h2와 p는 전체 구역에 사용돼 코드 불안정한 가능성이 있기에, 해당 요소 css만 부여되는 <i>></i>를 사용해줍니다.
             </p>
             <div class="t_code">
-<pre><code>    /* fonts */
+<pre><code class="language.js">    /* fonts */
     @import url('https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css');
     .nexon {
         font-family: 'NexonLv1Gothic';
@@ -162,7 +162,7 @@
             <br><br>
 
             <h3 class="t_tit2">결과물</h3>
-            <div class="t_iframe" style="min-height: 920px; padding-top: 0;">
+            <div class="t_iframe" style="min-height: 100px; padding-top: 0;">
                 <iframe src="https://kdb6.github.io/ck/site/headerType/headerType01.html" frameborder="0"></iframe>
             </div>
     
