--- a/study/t_study/Ex/study/imgText01.html
+++ b/study/t_study/Ex/study/imgText01.html
@@ -23,7 +23,8 @@
             <p class="t_desc2">
                 사이트를 코딩하는 데에 필요한 HTML의 구조를 잡아줍니다.
             </p>
-<div class="t_code">    &lt;section id="imgTextType" class="imgText__wrap nexon section">
+            <div class="t_code">    
+<pre><code class="language.js">    &lt;section id="imgTextType" class="imgText__wrap nexon section">
         &lt;h2 class="blind">유용한 사이트 살펴보기&lt;/h2>
         &lt;div class="imgText__inner container">
             &lt;div class="imgText__txt">
@@ -47,7 +48,6 @@
             &lt;/div>
         &lt;/div>
     &lt;/section>
-<pre><code>    
 </code></pre>
             </div>
 
@@ -57,7 +57,7 @@
                 h2와 p는 전체 구역에 사용돼 코드 불안정한 가능성이 있기에, 해당 요소 css만 부여되는 <i>></i>를 사용해줍니다.
             </p>
             <div class="t_code">
-<pre><code>    /* fonts */
+<pre><code class="language.js">    /* fonts */
     @import url('https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css');
     .nexon {
         font-family: 'NexonLv1Gothic';
@@ -194,19 +194,19 @@
     }
 </code></pre>
                 <div class="t_link">
-                    <a href="https://github.com/KDB6/ck/blob/main/site/imgTypeText/imgText01.html" target="_blank">코드 원본 보기</a>
+                    <a href="https://github.com/KDB6/ck/blob/main/site/imgTextType/imgText01.html" target="_blank">코드 원본 보기</a>
                 </div>
             </div>
 
             <br><br>
 
             <h3 class="t_tit2">결과물</h3>
-            <div class="t_iframe" style="min-height: 920px; padding-top: 0;">
-                <iframe src="https://kdb6.github.io/ck/site/imgTypeText/imgText01.html" frameborder="0"></iframe>
+            <div class="t_iframe" style="min-height: 800px; padding-top: 0;">
+                <iframe src="https://kdb6.github.io/ck/site/imgTextType/imgText01.html" frameborder="0"></iframe>
             </div>
     
             <div class="t_link">
-                <a href="https://kdb6.github.io/ck/site/imgTypeText/imgText01.html" target="_blank">원본 사이트 보기</a>
+                <a href="https://kdb6.github.io/ck/site/imgTextType/imgText01.html" target="_blank">원본 사이트 보기</a>
             </div>
 
         </div>
