--- a/javascript/index.html
+++ b/javascript/index.html
@@ -18,6 +18,10 @@
             padding: 0;
         }
 
+        body {
+            background-color: #fcfcfc;
+        }
+
         main {
             display: flex;
             align-items: center;
@@ -28,7 +32,7 @@
             font-family: "SCoreDream";
             text-align: center;
             padding: 2vw;
-            border: 8px solid #0243f1;
+            border: 8px solid #afbeff;
             box-sizing: border-box;
             border-radius: 20px;
             position: relative;
@@ -36,7 +40,7 @@
 
         main::before {
             content: "";
-            border: 8px solid #50b5f9;
+            border: 8px solid #c9d3ff;
             position: absolute;
             left: 0;
             top: 0;
@@ -48,7 +52,7 @@
 
         h1 {
             font-size: 8vw;
-            color: #0243f1;
+            color: #a1b2ff;
             margin-bottom: 4vw;
             text-transform: capitalize;
         }
@@ -60,8 +64,8 @@
 
         nav ul li a {
             text-decoration: none;
-            border: 1px dashed #0243f1;
-            color: #0243f1;
+            border: 1px dashed #e6e6e6;
+            color: #a1b2ff;
             padding: 10px 24px;
             display: inline-block;
             margin: 6px 3px;
@@ -71,7 +75,7 @@
         }
 
         nav ul li a:hover {
-            background-color: #0243f1;
+            background-color: #afbeff;
             color: #ffffff;
         }
 
@@ -79,9 +83,9 @@
         .dog .wrap {
             width: 300px;
             height: 300px;
-            background: #0066ff;
+            background: #a1b2ff;
             position: relative;
-            box-shadow: 0 -10px 0 0 #0057d9;
+            box-shadow: 0 -10px 0 0 #bac7ff;
             border-radius: 50%;
         }
 
@@ -465,7 +469,7 @@
                 display: none;
             }
         }
-        
+
         .link {
             position: absolute;
             right: 30px;
@@ -484,8 +488,8 @@
             line-height: 30px;
             display: inline-block;
             text-decoration: none;
-            border: 1px solid #0057d9;
-            background: #000;
+            border: 1px solid #e6e6e6;
+            background: #afbeff;
             color: #fff;
             text-transform: uppercase;
             font-family: "SCoreDream";
@@ -493,8 +497,8 @@
             transition: all 0.3s;
         }
         .link li a:hover {
-            background: #000;
-            color: #0066ff;
+            background: #fff;
+            color: #afbeff;
         }
     </style>
 </head>
