--- a/javascript/effect/sliderEffect.html
+++ b/javascript/effect/sliderEffect.html
@@ -26,9 +26,9 @@
     <main>
         <div class="intro_menu">
             <ul>
-                <li>01. 슬라이드 이펙트 : 트랜지션 효과<a href="slideEffect01.html">GO</a></li>
-                <li>02. 슬라이드 이펙트 : 좌로 움직이기<a href="slideEffect02.html">GO</a></li>
-                <li>02. 슬라이드 이펙트 : 좌로 움직이기(연속적으로)<a href="slideEffect02.html">GO</a></li>
+                <li>01. 슬라이드 이펙트 : 트랜지션 효과<a href="sliderEffect01.html">GO</a></li>
+                <li>02. 슬라이드 이펙트 : 좌로 움직이기<a href="sliderEffect02.html">GO</a></li>
+                <li>03. 슬라이드 이펙트 : 좌로 움직이기(연속적으로)<a href="sliderEffect03.html">GO</a></li>
             </ul>
         </div>
     </main>
